# 3DCitySG

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: citygml_v2.yaml  citygml_v3.yaml  default.yaml  neo4j.yaml
configs/baselines/: 201dong_v1_baseline.json
data/input/: sample_citygml_v2.gml
docs/: architecture.md  development_summary.md  development_summary_ko.md  evaluation_scorecard.md  experiment_results.md  experiment_results_ko.md  feature_implementation_guide.md  feature_implementation_guide_ko.md  graph_schema.md  module_stubs.md  paper_outline.md  performance_profiling_guide.md  performance_profiling_guide_ko.md  query_benchmark_guide.md  query_benchmark_guide_ko.md  regression_testing.md  relation_definitions.md  spatial_relation_spec_v1.md  v1_measurement_runbook.md  v1_measurement_runbook_ko.md
scripts/: benchmark_queries.py  check_large_scale_baseline.py  profile_import_runs.py  run_export_graph.py  run_import.py  run_relations.py
src/citygml_sg/: __init__.py
src/citygml_sg/app/: cli.py  pipeline.py  service_container.py
src/citygml_sg/config/: __init__.py  schema.py  settings.py
src/citygml_sg/domain/: bbox.py  city_objects.py  edge.py  enums.py  geometry.py  node.py
src/citygml_sg/evaluation/: ablation.py  query_cases.py  relation_metrics.py  statistics.py
src/citygml_sg/extractors/: bbox_extractor.py  centroid_extractor.py  geometry_extractor.py  hierarchy_extractor.py  lod_extractor.py  semantic_extractor.py
tests/: test_pipeline_regression.py  test_spatial_priority.py  test_spatial_relation_pairs.py
(+61 files in other folders)
